syntax = "proto3";


import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service MailService {
    rpc SendEmailOnce(CreatedUser) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1alpha1/send"
            body: "CreatedUser"
        };
    }

    rpc ResendEmail(CreatedUser) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1alpha1/resend"
            body: "CreatedUser"
        };
    }

    rpc VerifyEmail(ConfirmUserRequest) returns (ConfirmUserResponse) {
        option (google.api.http) = {
            post: "/v1alpha1/confirm"
            body: "CreatedUserResponse"
        };
    }  
}

message CreatedUser {
    string id = 1;
    string email = 2;
}

message ConfirmUserRequest {
    string id = 1;
    string token = 2;
}

message ConfirmUserResponse {
    bool confirmed = 1;
}